[package]
name = "winit-web-touch-event-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
web-sys = "0.3"

[patch.crates-io]
winit = { git = "https://github.com/ryo33/winit", rev = "bac7e9323ba2b885a79accde71d0bda5189d4f60" }
