[package]
name = "winit-web-touch-event-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "02fbf16c8096e49ced66db571373128ea9508b9f" }
web-sys = { version = "0.3", features = ["Window"] }

[patch.crates-io]
winit = { git = "https://github.com/ryo33/winit", rev = "79209f90dc0cb382ae2649caddb325731e90b71b" }
